2004-05-04 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added a -f/--full-regex option to belongs and some logic
          so users can do belongs ant, belongs /usr/bin/ant and
          belongs -f ".*ant.*" while getting sensible results. 
          Fixes #37637.

2004-03-13 Marius Mauch <genone@gentoo.org>
	* fixing descriptions for local USE flags
	* more checking on exceptions

2004-01-23 Marius Mauch <genone@gentoo.org>
	* now catches Exceptions thrown by portage
	* minor bugfixes

2004-01-12 Marius Mauch <genone@gentoo.org>
	* added mask, keyword and slot information to list command

2004-01-07 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Renamed to equery
	* Added Makefile
	
2003-12-31 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added which command
	* Added check command (not finished)
	
2003-12-12 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added size command
	* Added depgraph command
	
2003-12-11 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added list command
	* Added uses command
	
2003-10-05 Karl Trygve Kalleberg <karltk@gentoo.org>
	* Added files command
	* Added belongs command
	
