@@ -1,3 +1,8 @@
+2004-08-22 Karl Trygve Kalleberg <karltk@gentoo.org>
+	* Searches now include masked packages, when installed.
+	* Fixed output to be piping-friendly
+	* Added -N option to force non-piping output
+
 2004-05-04 Karl Trygve Kalleberg <karltk@gentoo.org>
 	* Added a -f/--full-regex option to belongs and some logic
           so users can do belongs ant, belongs /usr/bin/ant and
